--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zoomkoding.com",
-  "private": false,
+  "private": true,
   "description": "A neat blog theme for developers",
   "version": "3.0.0",
   "author": "zoomkoding <zoomkoding@gmail.com>",
@@ -39,6 +39,19 @@
     "gh-pages": "^3.2.3",
     "prettier": "2.2.1"
   },
+  "resolutions": {
+    "@babel/core": "^7.12.3",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "babel-eslint": "^10.0.0",
+    "eslint": "^7.5.0",
+    "gatsby-plugin-sharp": "^4.0.0-next",
+    "gatsby-source-filesystem": "^4.0.0-next",
+    "graphql": "^15.0.0",
+    "react-helmet": "^5.1.3 || ^6.0.0",
+    "typescript": ">=2.8.0",
+    "webpack": "^4.36.0 || ^5.0.0"
+  },
   "keywords": [
     "gatsby",
     "gatsby-plugin",
@@ -47,10 +60,9 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby clean && gatsby build",
-    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "deploy": "gatsby clean && gatsby build && gh-pages -d public",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
